[project]
name = "blogfusionai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.21",
    "langchain-ollama>=0.3.0",
    "ollama>=0.4.7",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "safety>=3.3.1",
]
